src/QSlider.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQSliderCtor_1(void * parent);
EXTERNC void * SCWQSliderCtor_1(void * parent);
EXTERNC void * QWQSliderCtor_2(int  orientation, void * parent);
EXTERNC void * SCWQSliderCtor_2(int  orientation, void * parent);
EXTERNC void QWQSlidersetTickPosition(void * obj, int  position);
EXTERNC int QWQSlidertickPosition(void * obj);
EXTERNC void QWQSlidersetTickInterval(void * obj, int32_t  ti);
EXTERNC int32_t QWQSlidertickInterval(void * obj);
EXTERNC void QWvalidateCB_QSlider(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQSliderDtor(void *);
EXTERNC void SCWQSliderDtor(void *);